# pangaea

./: .gitignore  Cargo.toml  README.md
examples/: dataset.rs  download_data.rs  elastic_doc.rs  elastic_search.rs  metadata.rs
src/: download_data.rs  elastic.rs  error.rs  lib.rs  types.rs
src/dataset/: datasettype.rs  mod.rs
src/metadata/: metadatatype.rs  mod.rs
src/utils/: mod.rs
tests/: dataset.rs  metadata.rs
