[package]
name = "pangaea"
version = "0.2.2"
edition = "2021"
authors = ["Niklas Frondorf <niklas.frondorf@web.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A rust module to to access data from pangaea.de"
repository = "https://github.com/0x6e66/pangaea"
homepage = "https://github.com/0x6e66/pangaea"
include = ["src", "Cargo.toml", "README.md"]
keywords = ["data-publisher", "pangaea", "geographic"]
documentation = "https://docs.rs/pangaea/"


[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
elasticsearch = "8.5.0-alpha.1"
futures-util = "0.3.30"
reqwest = { version = "0.11.23", features = ["stream"] }
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
yaserde = "0.9.1"
yaserde_derive = "0.9.1"


[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }


[patch.crates-io]
elasticsearch = { git = "https://github.com/0x6e66/elasticsearch-rs.git", branch = "version-5.6-compatibility", version = "8.6.0-alpha.1"}
